change Input Systems config to include the language code name so it doesn't need to be found in the large languages data file

--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -9,7 +9,9 @@
 			<div class="overlay" data-ng-show="show.newLanguage">
 				<div class="lf-dropdown-menu">
 					<pui-select-language pui-code="newCode" pui-language="newlanguage" pui-add-disabled="addDisabled">
-						<button class="btn btn-primary" data-ng-click="addInputSystem(newCode, selects.special.optionsOrder[0])" data-ng-disabled="addDisabled">
+						<button class="btn btn-primary" 
+							data-ng-click="addInputSystem(newCode, newlanguage.name, selects.special.optionsOrder[0])" 
+							data-ng-disabled="addDisabled">
 							<i class="icon-plus"></i> Add {{newlanguage.name}}</button>
 					</pui-select-language>
 				</div>
@@ -33,11 +35,11 @@
 				<a class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="font-weight:normal">
 					More <span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><a tabindex="-1" data-ng-click="addInputSystem(inputSystems[currentInputSystemTag].code, selects.special.optionsOrder[1])">
+					<li><a tabindex="-1" data-ng-click="addInputSystem(inputSystems[currentInputSystemTag].code, inputSystems[currentInputSystemTag].codeName, selects.special.optionsOrder[1])">
 						<i class="icon-plus"></i> Add IPA for {{inputSystems[inputSystems[currentInputSystemTag].code].name}}</a></li>
-					<li><a tabindex="-1" data-ng-click="addInputSystem(inputSystems[currentInputSystemTag].code, selects.special.optionsOrder[2])">
+					<li><a tabindex="-1" data-ng-click="addInputSystem(inputSystems[currentInputSystemTag].code, inputSystems[currentInputSystemTag].codeName, selects.special.optionsOrder[2])">
 						<i class="icon-plus"></i> Add Voice for {{inputSystems[inputSystems[currentInputSystemTag].code].name}}</a></li>
-					<li><a tabindex="-1" data-ng-click="addInputSystem(inputSystems[currentInputSystemTag].code, selects.special.optionsOrder[3])">
+					<li><a tabindex="-1" data-ng-click="addInputSystem(inputSystems[currentInputSystemTag].code, inputSystems[currentInputSystemTag].codeName, selects.special.optionsOrder[3])">
 						<i class="icon-plus"></i> Add a variant of {{inputSystems[inputSystems[currentInputSystemTag].code].name}}</a></li>
 					<li class="divider"></li>
 					<li data-ng-class="{disabled:(inputSystems[currentInputSystemTag].fieldUseCount > 0)}">
