wip: select language show in modal dialog

--- a/src/angular-app/languageforge/lexicon/views/input-systems.html
+++ b/src/angular-app/languageforge/lexicon/views/input-systems.html
@@ -4,6 +4,7 @@
 	<div class="span3">
 		<!-- control buttons -->
 		<div class="control-group">
+			<button class="btn btn-success" data-ng-click="openNewLanguage()">New</button>
 			<button class="btn btn-success" data-ng-click="show.newLanguage = !show.newLanguage" style="font-weight:normal">
 				New <span class="caret"></span></button>
 			<div class="overlay" data-ng-show="show.newLanguage">
