updated variable names

--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -130,20 +130,20 @@ config.entry {{config.entry|json}}
 				</div></dd>
 				<dt>Add Information</dt>
 				<dd><div class="controls">
-					<div data-ng-click="selectTask('add-meanings')" data-ng-class="{selected:currentTaskName == 'add-meanings'}">
-						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['add-meanings'].visible"> Add Meanings</div>
+					<div data-ng-click="selectTask('addMeanings')" data-ng-class="{selected:currentTaskName == 'addMeanings'}">
+						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['addMeanings'].visible"> Add Meanings</div>
 					</div>
-					<div data-ng-click="selectTask('add-grammar')" data-ng-class="{selected:currentTaskName == 'add-grammar'}">
-						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['add-grammar'].visible"> Add Parts of Speech</div>
+					<div data-ng-click="selectTask('addGrammar')" data-ng-class="{selected:currentTaskName == 'addGrammar'}">
+						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['addGrammar'].visible"> Add Parts of Speech</div>
 					</div>
-					<div data-ng-click="selectTask('add-examples')" data-ng-class="{selected:currentTaskName == 'add-examples'}">
-						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['add-examples'].visible"> Add Example Sentences</div>
+					<div data-ng-click="selectTask('addExamples')" data-ng-class="{selected:currentTaskName == 'addExamples'}">
+						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['addExamples'].visible"> Add Example Sentences</div>
 					</div>
 				</div></dd>
 				<dt>Gather Words</dt>
 				<dd><div class="controls">
-					<div data-ng-click="selectTask('gather-texts')" data-ng-class="{selected:currentTaskName == 'gather-texts'}">
-						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['gather-texts'].visible"> From Texts</div>
+					<div data-ng-click="selectTask('gatherTexts')" data-ng-class="{selected:currentTaskName == 'gatherTexts'}">
+						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['gatherTexts'].visible"> From Texts</div>
 					</div>
 					<div data-ng-click="selectTask('wordlist')" data-ng-class="{selected:currentTaskName == 'wordlist'}">
 						<div class="checkbox"><input type="checkbox" data-ng-model="config.tasks['wordlist'].visible"> From a Word List</div>
