--- a/src/angular-app/languageforge/lexicon/views/selectNewLanguage.html
+++ b/src/angular-app/languageforge/lexicon/views/selectNewLanguage.html
@@ -10,4 +10,11 @@
 		data-ng-click="add()" 
 		data-ng-disabled="addDisabled">
 		<i class="icon-plus"></i> Add {{selected.language.name}}</button>
+	<p class="pull-left">
+		<a href="http://www.infoterm.info/standardization/iso_639_1_2002.php" target="_blank">
+			<small><i class="icon-globe"></i> About Language 639-1 Codes</small></a>
+		<br />
+		<a href="http://www.sil.org/iso639-3/" target="_blank">
+			<small><i class="icon-globe"></i> About Language 639-3 Codes</small></a>
+	</p>
 </div>
