--- a/src/css/languageforge/default/lf.css
+++ b/src/css/languageforge/default/lf.css
@@ -878,6 +878,9 @@ dl#fields {
 	padding-left: 20px;
 }
 
+td.primary > div { width: 200px; height: 20px; }
+td.container > div { width: 100%; height: 20px; overflow:hidden; }
+
 /* New Item under ribbon bar */
 div.new-item form {
 	margin: 20px 0 0 0;
